--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,8 @@ message(STATUS "CMAKE_VERSION: ${CMAKE_VERSION}")
 
 
 
-set(CMAKE_C_COMPILER "clang")
-set(CMAKE_CXX_COMPILER "clang++")
+set(CMAKE_C_COMPILER "clang-15")
+set(CMAKE_CXX_COMPILER "clang++-15")
 
 
 # CMAKE_CXX_COMPILER_ID: Distinguish between "AppleClang" and "Clang"
