set LD anc CXX flags via environment

--- a/.github/workflows/build-checks.yml
+++ b/.github/workflows/build-checks.yml
@@ -59,6 +59,8 @@ jobs:
           LD: clang++
           CC: clang
           CXX: clazy
+          CXXFLAGS: -stdlib=libc++
+          LDFLAGS: -stdlib=libc++
       - name: Configure (clang-tidy)
         if: matrix.name == 'clang-tidy'
         run: |
