--- a/.github/workflows/build-checks.yml
+++ b/.github/workflows/build-checks.yml
@@ -53,6 +53,7 @@ jobs:
             -DMAD=ON \
             -DMODPLUG=ON \
             -DWAVPACK=ON \
+            -DENGINEPRIME=OFF \
             ..
         working-directory: build
         env:
