--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2049,6 +2049,7 @@ endif()
 
 add_executable(mixxx-test
   src/test/mixxxtest.cpp
+  src/test/helpers/log_test.cpp
   src/test/cuecontrol_test.cpp
   src/test/signalpathtest.cpp
   src/test/fifotest.cpp
