--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2063,8 +2063,8 @@ if (QML)
 endif()
 find_package(GTest CONFIG REQUIRED)
 set_target_properties(mixxx-test PROPERTIES AUTOMOC ON)
-target_compile_options(mixxx-test -fsanitize=thread -g)
-target_link_options(mixxx-test -fsanitize=thread)
+target_compile_options(mixxx-test PRIVATE -fsanitize=thread -g)
+target_link_options(mixxx-test PRIVATE -fsanitize=thread)
 target_link_libraries(mixxx-test PRIVATE mixxx-lib mixxx-gitinfostore GTest::gtest GTest::gmock)
 
 find_package(benchmark)
