Update CMakeLists.txt wit cpp file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2532,7 +2532,7 @@ target_link_libraries(mixxx-lib PRIVATE Vorbis::vorbis Vorbis::vorbisenc Vorbis:
 # PortAudio Ring Buffer
 add_library(PortAudioRingBuffer STATIC EXCLUDE_FROM_ALL
   lib/portaudio/pa_ringbuffer.c
-  lib/portaudio/pam_ringbuffer.c
+  lib/portaudio/pam_ringbuffer.cpp
 )
 target_compile_options(PortAudioRingBuffer PUBLIC -fsanitize=thread -g)
 target_link_options(PortAudioRingBuffer PUBLIC -fsanitize=thread)
