Use REQUIRED when looking up hidapi

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4485,18 +4485,14 @@ find_package(LibUSB)
 option(HID "USB HID controller support" ON)
 if(HID)
   # hidapi 0.14.0 is the first release, that contains bus type information
-  find_package(hidapi 0.14.0)
-  if(NOT hidapi_FOUND)
-    message(FATAL_ERROR "hidapi >= 0.14.0 not found!")
+  find_package(hidapi 0.14.0 REQUIRED)
+  # hidapi has two backends on Linux, one using the kernel's hidraw API and one using libusb.
+  # libusb obviously does not support Bluetooth HID devices, so use the hidraw backend. The
+  # libusb backend is the default, so hidraw needs to be selected explicitly at link time.
+  if(CMAKE_SYSTEM_NAME STREQUAL Linux)
+    target_link_libraries(mixxx-lib PRIVATE hidapi::hidraw)
   else()
-    # hidapi has two backends on Linux, one using the kernel's hidraw API and one using libusb.
-    # libusb obviously does not support Bluetooth HID devices, so use the hidraw backend. The
-    # libusb backend is the default, so hidraw needs to be selected explicitly at link time.
-    if(CMAKE_SYSTEM_NAME STREQUAL Linux)
-      target_link_libraries(mixxx-lib PRIVATE hidapi::hidraw)
-    else()
-      target_link_libraries(mixxx-lib PRIVATE hidapi::hidapi)
-    endif()
+    target_link_libraries(mixxx-lib PRIVATE hidapi::hidapi)
   endif()
   target_sources(
     mixxx-lib
