Don't install "QmlWorkerScript" explicit on QT_VERSION > 6.6

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3293,13 +3293,14 @@ if(QML)
   list(APPEND QT_EXTRA_COMPONENTS "QuickShapesPrivate")
   list(APPEND QT_EXTRA_COMPONENTS "QuickTemplates2")
   list(APPEND QT_EXTRA_COMPONENTS "QuickWidgets")
-  list(APPEND QT_EXTRA_COMPONENTS "QmlWorkerScript")
   list(APPEND QT_EXTRA_COMPONENTS "ShaderTools")
   if(QT_VERSION VERSION_GREATER 6.6)
     list(APPEND QT_EXTRA_COMPONENTS "QuickControls2Basic")
     list(APPEND QT_EXTRA_COMPONENTS "QuickControls2BasicStyleImpl")
     list(APPEND QT_EXTRA_COMPONENTS "QuickControls2Fusion")
     list(APPEND QT_EXTRA_COMPONENTS "QuickControls2FusionStyleImpl")
+  else()
+    list(APPEND QT_EXTRA_COMPONENTS "QmlWorkerScript")
   endif()
 endif()
 find_package(
@@ -3653,6 +3654,15 @@ else()
             COMPONENT
             applocal
         )
+      else()
+        install(
+          IMPORTED_RUNTIME_ARTIFACTS
+            Qt${QT_VERSION_MAJOR}::QmlWorkerScript
+            DESTINATION
+            "${MIXXX_INSTALL_DATADIR}"
+            COMPONENT
+            applocal
+        )
       endif()
 
       install(
@@ -3667,15 +3677,6 @@ else()
       install(
         IMPORTED_RUNTIME_ARTIFACTS
           Qt${QT_VERSION_MAJOR}::QuickShapesPrivate
-          DESTINATION
-          "${MIXXX_INSTALL_DATADIR}"
-          COMPONENT
-          applocal
-      )
-
-      install(
-        IMPORTED_RUNTIME_ARTIFACTS
-          Qt${QT_VERSION_MAJOR}::QmlWorkerScript
           DESTINATION
           "${MIXXX_INSTALL_DATADIR}"
           COMPONENT
