--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -107,6 +107,7 @@ jobs:
               -DWAVPACK=ON
               -DVCPKG_TARGET_TRIPLET=x64-windows
               -DVCPKG_DEFAULT_HOST_TRIPLET=x64-windows
+              -DOPTIMIZE=OFF
             cc: cl
             cxx: cl
             # TODO: Fix these broken tests on Windows
