MSVC: Add a sanity check for the /MDd flag

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1826,6 +1826,9 @@ endif()
 if(WIN32)
   set(CMAKE_INSTALL_SYSTEM_RUNTIME_DESTINATION "${MIXXX_INSTALL_BINDIR}")
   if(MSVC AND CMAKE_BUILD_TYPE STREQUAL "Debug")
+    if(NOT CMAKE_CXX_FLAGS_DEBUG MATCHES "/MDd")
+      message(WARNING "The flag /MDd, required to link against VCPKG Debug libraries is missing")
+    endif()
     set(CMAKE_INSTALL_DEBUG_LIBRARIES true)
   endif()
   include(InstallRequiredSystemLibraries)
