Enable Debug Build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,6 +27,7 @@ jobs:
               -DMODPLUG=ON
               -DWAVPACK=ON
               -DINSTALL_USER_UDEV_RULES=OFF
+              -DCMAKE_BUILD_TYPE=Debug
             ctest_args: []
             compiler_cache: ccache
             compiler_cache_path: /home/runner/.cache/ccache
@@ -50,6 +51,7 @@ jobs:
               -DWAVPACK=ON
               -DVCPKG_TARGET_TRIPLET=x64-osx-min1100-release
               -DVCPKG_DEFAULT_HOST_TRIPLET=x64-osx-min1100-release
+              -DCMAKE_BUILD_TYPE=Debug
             # TODO: Fix this broken test on macOS
             ctest_args: --exclude-regex DirectoryDAOTest.relocateDirectory
             cpack_generator: DragNDrop
@@ -75,6 +77,7 @@ jobs:
               -DVCPKG_TARGET_TRIPLET=arm64-osx-min1100-release
               -DVCPKG_DEFAULT_HOST_TRIPLET=x64-osx-min1100-release
             # TODO: Fix this broken test on macOS
+              -DCMAKE_BUILD_TYPE=Debug
             crosscompile: true
             cpack_generator: DragNDrop
             compiler_cache: ccache
@@ -104,6 +107,7 @@ jobs:
               -DWAVPACK=ON
               -DVCPKG_TARGET_TRIPLET=x64-windows-release
               -DVCPKG_DEFAULT_HOST_TRIPLET=x64-windows-release
+              -DCMAKE_BUILD_TYPE=Debug
             cc: cl
             cxx: cl
             # TODO: Fix these broken tests on Windows
