Set CMAKE_INSTALL_UCRT_LIBRARIES in debug mode to install missing ucrtbased.dll

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2237,6 +2237,7 @@ endif()
 if(WIN32)
   set(CMAKE_INSTALL_SYSTEM_RUNTIME_DESTINATION "${MIXXX_INSTALL_BINDIR}")
   if(MSVC AND CMAKE_BUILD_TYPE STREQUAL "Debug")
+    set(CMAKE_INSTALL_UCRT_LIBRARIES true)
     set(CMAKE_INSTALL_DEBUG_LIBRARIES true)
   endif()
   include(InstallRequiredSystemLibraries)
