--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2239,6 +2239,7 @@ if(WIN32)
   if(MSVC AND CMAKE_BUILD_TYPE STREQUAL "Debug")
     set(CMAKE_INSTALL_UCRT_LIBRARIES true)
     set(CMAKE_INSTALL_DEBUG_LIBRARIES true)
+    set(CMAKE_INSTALL_DEBUG_LIBRARIES_ONLY true) 
   endif()
   include(InstallRequiredSystemLibraries)
 endif()
