--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -297,7 +297,7 @@ jobs:
 
       - name: "Test"
         if: matrix.crosscompile != true
-        run: ctest --timeout 45 ${{ matrix.ctest_args }}
+        run: ctest -R SoundSourceProxyTest.seekBoundaries -VV --timeout 45 ${{ matrix.ctest_args }}
         working-directory: build
         env:
           # Render analyzer waveform tests to an offscreen buffer
